# dba_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose-observability-full.yml  docker-compose.yml  init-mongo.js  pyproject.toml  setup_minimal.py  start_minimal.bat
app/: config.py  main.py
app/api/: routes_alerts.py  routes_auth.py  routes_client.py  routes_clients.py  routes_integrations.py  routes_logs.py  routes_monitoring.py  routes_transactions.py
app/database/: create_table_clients.py  models.py  mongo_client.py
app/integrations/: alert_service.py  banking_integration.py  notification_service.py  viacep_integration.py
app/monitoring/: __init__.py  metrics_exporter.py  performance_monitor.py
app/security/: __init__.py  auth.py  roles.py
app/services/: auth_service.py  client_service.py  log_service.py  transaction_service.py
app/utils/: logger.py
docs/: API.md  DOCKER.md  INSTALLATION.md  README.md  TESTING.md  env_template.txt  mongodb_setup_instructions.txt  requirements.txt
monitor_db_minimal/: README_minimal.md  requirements.txt
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: alert_rules.yml  prometheus.yml
tests/: __init__.py  configtest.py  test_api_basics.py  test_clientes.py  test_logs.py  test_modernized_models.py  test_observability.py  test_security.py  test_transacoes.py
